# LangChain_RAG

./: .gitignore  README.md  main.py  pyproject.toml
docs/images/: README.md
faiss_db/: index.faiss  index.pkl
